--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Passionate developer crafting tools that solve real-world problems. Specializing in system optimization, crypto tools, and automation scripts.</p>
                 <div class="mt-4 flex space-x-4">
                     <a href="https://github.com/tboy1337" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">GitHub Profile</a>
-                    <a href="mailto:your-email@example.com" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Contact</a>
+                    <a href="mailto:tboy1337@users.noreply.github.com" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Contact</a>
                 </div>
             </div>
 
@@ -52,7 +52,7 @@
             <div class="grid md:grid-cols-3 gap-6">
                 <div class="project-card bg-black/40 p-6 rounded-lg">
                     <h3 class="text-xl font-semibold mb-2">Git Installation Tools</h3>
-                    <p class="mb-4">Automated scripts for Git installation on Windows and Linux</p>
+                    <p class="mb-4">Automated scripts for Git installation on Windows</p>
                     <div class="flex space-x-2">
                         <a href="https://github.com/tboy1337/Install-Uninstall-GIT-Windows" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded">Windows</a>
                         <a href="https://github.com/tboy1337/Install-Uninstall-GIT-Linux" class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded">Linux</a>
