--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="grid md:grid-cols-3 gap-6">
                 <div class="project-card bg-black/40 p-6 rounded-lg">
                     <h3 class="text-xl font-semibold mb-2">Git Installation Tools</h3>
-                    <p class="mb-4">Automated scripts for Git installation on Windows</p>
+                    <p class="mb-4">Automated scripts for Git installation on Windows & Linux</p>
                     <div class="flex space-x-2">
                         <a href="https://github.com/tboy1337/Install-Uninstall-GIT-Windows" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded">Windows</a>
                         <a href="https://github.com/tboy1337/Install-Uninstall-GIT-Linux" class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded">Linux</a>
