--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     <span class="bg-blue-500 text-white px-3 py-1 rounded-full">Python</span>
                     <span class="bg-yellow-500 text-white px-3 py-1 rounded-full">JavaScript</span>
                     <span class="bg-green-500 text-white px-3 py-1 rounded-full">Bash</span>
-                    <span class="bg-purple-500 text-white px-3 py-1 rounded-full">Solana</span>
+                    <span class="bg-purple-500 text-white px-3 py-1 rounded-full">Batch</span>
+                    <span class="bg-red-500 text-white px-3 py-1 rounded-full">Powershell</span>
                 </div>
             </div>
         </section>
