--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Passionate developer crafting tools that solve real-world problems. Specializing in system optimization, crypto tools, and automation scripts.</p>
                 <div class="mt-4 flex space-x-4">
                     <a href="https://github.com/tboy1337" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">GitHub Profile</a>
-                    <a href="mailto:tboy1337@users.noreply.github.com" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Contact</a>
+                    <a href="mailto:obywhuie@anonaddy.com" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Contact</a>
                 </div>
             </div>
 
