--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     </li>
                     <li class="game-menu-item" data-game="arrow">
                         <button type="button" class="px-4 py-2">
-                            <i class="fas fa-arrows-alt mr-2"></i>Arrow Keys
+                            <i class="fas fa-arrows-alt mr-2"></i>Music Keys
                         </button>
                     </li>
                 </ul>
@@ -324,9 +324,9 @@
                 </div>
                 <div id="arrow-game" class="mt-4 centered-content">
                     <div class="welcome-box bg-black/60 p-8 text-center rounded-lg">
-                        <p class="text-xl mb-4">Arrow Keys Rhythm Game</p>
-                        <p>Like Discord's keyboard combo screen, press the arrow keys shown on screen</p>
-                        <p>Hit the keys in time with the beat to play music!</p>
+                        <p class="text-xl mb-4">Music Keys</p>
+                        <p>Press the arrow keys to create your own music!</p>
+                        <p>Each arrow key plays a different note with electronic effects.</p>
                         <p class="mt-4">Click "Start Game" to begin</p>
                     </div>
                 </div>
