--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <!-- Game styles -->
     <link rel="stylesheet" href="games.css">
+    <!-- Translation script -->
+    <script src="translation.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
@@ -67,6 +69,8 @@
             <a href="mailto:obywhuie@anonaddy.com" class="text-gray-300 hover:text-white transition-colors" aria-label="Email Contact">
                 <i class="far fa-envelope text-2xl"></i>
             </a>
+            <!-- Added translation dropdown -->
+            <div id="google_translate_element" class="text-gray-300"></div>
         </div>
     </header>
 
