Add translation dropdown to index.html for improved multi-language support
Updated index.html to position the Google Translate dropdown at the top right of the header, enhancing accessibility for users. Removed duplicate translation element to streamline the code.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 </head>
 <body class="min-h-screen flex flex-col">
     <header class="bg-black/50 py-8 text-center backdrop-blur-sm">
+        <div class="flex justify-end px-4 mb-2">
+            <!-- Translation dropdown positioned at top right -->
+            <div id="google_translate_element" class="text-gray-300"></div>
+        </div>
         <h1 class="text-5xl font-bold text-white mb-2 glow">tboy1337</h1>
         <p class="text-xl text-gray-300">Developer • Innovator • Problem Solver</p>
         <div class="mt-4 flex justify-center space-x-6">
@@ -69,8 +73,6 @@
             <a href="mailto:obywhuie@anonaddy.com" class="text-gray-300 hover:text-white transition-colors" aria-label="Email Contact">
                 <i class="far fa-envelope text-2xl"></i>
             </a>
-            <!-- Added translation dropdown -->
-            <div id="google_translate_element" class="text-gray-300"></div>
         </div>
     </header>
 
