--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
-                            <span class="tag bg-yellow-600">Multi</span>
+                            <span class="tag bg-orange-600">Multi</span>
                             <span class="tag bg-gray-700">Multimedia</span>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">DAV2MKV</h3>
