--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="https://github.com/tboy1337" class="text-gray-300 hover:text-white transition-colors" aria-label="GitHub Profile">
                 <i class="fab fa-github text-2xl"></i>
             </a>
-            <a href="mailto:obywhuie@anonaddy.com" class="text-gray-300 hover:text-white transition-colors" aria-label="Email Contact">
+            <a href="mailto:tboy1337.unchanged733@aleeas.com" class="text-gray-300 hover:text-white transition-colors" aria-label="Email Contact">
                 <i class="far fa-envelope text-2xl"></i>
             </a>
         </div>
@@ -83,7 +83,7 @@
                 <p class="text-gray-300">Passionate developer crafting tools that solve real-world problems. Specializing in system optimization, networking tools, cryptography utilities, and automation scripts.</p>
                 <div class="mt-4 flex space-x-4">
                     <a href="https://github.com/tboy1337" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded transition-colors">GitHub Profile</a>
-                    <a href="mailto:obywhuie@anonaddy.com" class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2 rounded transition-colors">Contact</a>
+                    <a href="mailto:tboy1337.unchanged733@aleeas.com" class="bg-teal-600 hover:bg-teal-700 text-white px-4 py-2 rounded transition-colors">Contact</a>
                 </div>
             </div>
 
