Update index.html to add new project cards for various tools including Cryptocurrency Wallet Generators, Git Manager Windows, TgCrypto2, SubtranSlate, SMSMaster, scrapeer-py, LineForge, and ClockClock24-py. Also, updated the last updated date in the footer to July 2025.

--- a/index.html
+++ b/index.html
@@ -188,17 +188,19 @@
                     </div>
                     <a href="https://github.com/tboy1337/Repair-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
                 </div>
+                <!-- New card for Cryptocurrency Wallet Generators Organization -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
                             <span class="tag bg-yellow-600">JavaScript</span>
                             <span class="tag bg-gray-700">Crypto</span>
                         </div>
-                        <h3 class="text-xl font-semibold mb-2">Solana Wallet Generator</h3>
-                        <p class="mb-4 text-gray-300">A tool for generating Solana wallets and secrets with mnemonic support.</p>
+                        <h3 class="text-xl font-semibold mb-2">Cryptocurrency Wallet Generators</h3>
+                        <p class="mb-4 text-gray-300">A collection of open-source tools for generating wallets for various cryptocurrencies including Bitcoin, Ethereum, Solana, and more.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/solana-generate-wallets" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/Cryptocurrency-Wallet-Generators" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Organization</a>
                 </div>
+                <!-- New card for Video Streaming Server -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
@@ -209,6 +211,90 @@
                         <p class="mb-4 text-gray-300">A simple web-based video streaming server that allows you to share your video library with friends over the internet.</p>
                     </div>
                     <a href="https://github.com/tboy1337/video-streaming-server" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for Git-Manager-Windows -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-purple-600">Batch</span>
+                            <span class="tag bg-gray-700">System</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Git Manager Windows</h3>
+                        <p class="mb-4 text-gray-300">Simple batch scripts to automate the downloading, installation, uninstallation and updating of Git on Windows systems.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/Git-Manager-Windows" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for TgCrypto2 -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-red-600">C</span>
+                            <span class="tag bg-gray-700">Crypto</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">TgCrypto2</h3>
+                        <p class="mb-4 text-gray-300">Fork of TgCrypto with working wheels for Python 3.9-3.13 on Windows, Mac, and Linux.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/tgcrypto2" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for SubtranSlate -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Multimedia</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">SubtranSlate</h3>
+                        <p class="mb-4 text-gray-300">A powerful and flexible tool for translating subtitle files between languages. Currently supports SRT format.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/SubtranSlate" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for SMSMaster -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Utilities</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">SMSMaster</h3>
+                        <p class="mb-4 text-gray-300">A cross-platform Python application with Tkinter GUI that allows sending free SMS messages to mobile phones worldwide.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/SMSMaster" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for scrapeer-py -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Networking</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">Scrapeer-py</h3>
+                        <p class="mb-4 text-gray-300">A tiny Python library that lets you scrape HTTP(S) and UDP trackers for torrent information.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/scrapeer-py" class="inline-block bg-gradient-to-r from-blue-500 to-indigo-600 hover:from-blue-600 hover:to-indigo-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for LineForge -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Utilities</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">LineForge</h3>
+                        <p class="mb-4 text-gray-300">A cross-platform Python script to normalize line endings in text files between CRLF (Windows) and LF (Unix/Linux/macOS).</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/LineForge" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                </div>
+                <!-- New card for ClockClock24-py -->
+                <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
+                    <div class="card-content">
+                        <div class="mb-3">
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Fun</span>
+                        </div>
+                        <h3 class="text-xl font-semibold mb-2">ClockClock24-py</h3>
+                        <p class="mb-4 text-gray-300">Python port of the ClockClock project.</p>
+                    </div>
+                    <a href="https://github.com/tboy1337/ClockClock24-py" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
                 </div>
             </div>
         </section>
@@ -361,7 +447,7 @@
     <footer class="bg-black/50 py-6 text-center backdrop-blur-sm mt-12">
         <div class="container mx-auto px-4">
             <p class="text-gray-300">© 2025 tboy1337 | Powered by curiosity, fueled by coffee ☕</p>
-            <p class="text-gray-500 mt-2 text-sm">Last updated: April 2025</p>
+            <p class="text-gray-500 mt-2 text-sm">Last updated: July 2025</p>
         </div>
     </footer>
 
