Enhance mobile layout and error handling in games
- Improved mobile header layout and game menu styles in games.css for better usability.
- Added error handling in games.js to ensure game elements are present before initialization, with console warnings for missing elements.
- Registered a service worker in index.html for improved performance and offline capabilities.
- Updated robots.txt to allow crawling of specific file types and added a sitemap link.

--- a/index.html
+++ b/index.html
@@ -453,5 +453,20 @@
 
     <!-- Game script -->
     <script src="games.js"></script>
+    
+    <!-- Service Worker Registration -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(function(registration) {
+                        console.log('ServiceWorker registration successful');
+                    })
+                    .catch(function(error) {
+                        console.log('ServiceWorker registration failed');
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
