--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
                     <div class="card-content">
                         <div class="mb-3">
-                            <span class="tag bg-red-600">C</span>
-                            <span class="tag bg-gray-700">Crypto</span>
+                            <span class="tag bg-blue-600">Python</span>
+                            <span class="tag bg-gray-700">Utilities</span>
                         </div>
                         <h3 class="text-xl font-semibold mb-2">TgCrypto2</h3>
                         <p class="mb-4 text-gray-300">Fork of TgCrypto with working wheels for Python 3.9-3.13 on Windows, Mac, and Linux.</p>
