--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                         <h3 class="text-xl font-semibold mb-2">TgCrypto2</h3>
                         <p class="mb-4 text-gray-300">Fork of TgCrypto with working wheels for Python 3.9-3.13 on Windows, Mac, and Linux.</p>
                     </div>
-                    <a href="https://github.com/tboy1337/tgcrypto2" class="inline-block bg-gradient-to-r from-purple-500 to-pink-600 hover:from-purple-600 hover:to-pink-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
+                    <a href="https://github.com/tboy1337/tgcrypto2" class="inline-block bg-gradient-to-r from-green-500 to-teal-600 hover:from-green-600 hover:to-teal-700 text-white px-4 py-2 rounded transition-colors">View Project</a>
                 </div>
                 <!-- New card for SubtranSlate -->
                 <div class="project-card bg-black/40 p-6 rounded-lg backdrop-blur-sm border border-white/10">
