--- a/index.html
+++ b/index.html
@@ -584,20 +584,34 @@
 
         <section class="mt-12">
             <h2 class="text-3xl font-bold text-center mb-6">🏆 GitHub Achievements</h2>
-            <div class="flex justify-center space-x-6">
-                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="text-4xl text-center text-yellow-400 mb-2">
-                        <i class="fas fa-bolt"></i>
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-6 max-w-4xl mx-auto">
+                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
+                    <div class="w-16 h-16 mb-3 flex items-center justify-center">
+                        <img src="quickdraw-default.png" alt="Quickdraw Achievement" class="w-full h-full object-contain">
                     </div>
-                    <h3 class="text-xl text-center">Quickdraw</h3>
-                    <p class="text-center text-gray-300">Rapid response champion</p>
+                    <h3 class="text-lg text-center font-semibold">Quickdraw</h3>
+                    <p class="text-center text-gray-300 text-sm mt-1">Rapid response champion</p>
                 </div>
-                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10">
-                    <div class="text-4xl text-center text-blue-400 mb-2">
-                        <i class="fas fa-code-pull-request"></i>
+                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
+                    <div class="w-16 h-16 mb-3 flex items-center justify-center">
+                        <img src="pull-shark-default.png" alt="Pull Shark Achievement" class="w-full h-full object-contain">
                     </div>
-                    <h3 class="text-xl text-center">Pull Shark</h3>
-                    <p class="text-center text-gray-300">Master of collaborative coding</p>
+                    <h3 class="text-lg text-center font-semibold">Pull Shark</h3>
+                    <p class="text-center text-gray-300 text-sm mt-1">Master of collaborative coding</p>
+                </div>
+                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
+                    <div class="w-16 h-16 mb-3 flex items-center justify-center">
+                        <img src="pair-extraordinaire-default.png" alt="Pair Extraordinaire Achievement" class="w-full h-full object-contain">
+                    </div>
+                    <h3 class="text-lg text-center font-semibold">Pair Extraordinaire</h3>
+                    <p class="text-center text-gray-300 text-sm mt-1">Collaborative coding expert</p>
+                </div>
+                <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
+                    <div class="w-16 h-16 mb-3 flex items-center justify-center">
+                        <img src="yolo-default.png" alt="YOLO Achievement" class="w-full h-full object-contain">
+                    </div>
+                    <h3 class="text-lg text-center font-semibold">YOLO</h3>
+                    <p class="text-center text-gray-300 text-sm mt-1">You Only Live Once</p>
                 </div>
             </div>
         </section>
