Update achievement descriptions in index.html for clarity and engagement: revised text for Quickdraw, Pull Shark, Pair Extraordinaire, and YOLO achievements to better reflect their significance.

--- a/index.html
+++ b/index.html
@@ -590,28 +590,28 @@
                         <img src="quickdraw-default.png" alt="Quickdraw Achievement" class="w-full h-full object-contain">
                     </div>
                     <h3 class="text-lg text-center font-semibold">Quickdraw</h3>
-                    <p class="text-center text-gray-300 text-sm mt-1">Rapid response champion</p>
+                    <p class="text-center text-gray-300 text-sm mt-1">Gitty up!</p>
                 </div>
                 <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
                     <div class="w-16 h-16 mb-3 flex items-center justify-center">
                         <img src="pull-shark-default.png" alt="Pull Shark Achievement" class="w-full h-full object-contain">
                     </div>
                     <h3 class="text-lg text-center font-semibold">Pull Shark</h3>
-                    <p class="text-center text-gray-300 text-sm mt-1">Master of collaborative coding</p>
+                    <p class="text-center text-gray-300 text-sm mt-1">Opened pull requests that have been merged</p>
                 </div>
                 <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
                     <div class="w-16 h-16 mb-3 flex items-center justify-center">
                         <img src="pair-extraordinaire-default.png" alt="Pair Extraordinaire Achievement" class="w-full h-full object-contain">
                     </div>
                     <h3 class="text-lg text-center font-semibold">Pair Extraordinaire</h3>
-                    <p class="text-center text-gray-300 text-sm mt-1">Collaborative coding expert</p>
+                    <p class="text-center text-gray-300 text-sm mt-1">Coauthored commits on merged pull requests</p>
                 </div>
                 <div class="bg-black/40 p-5 rounded-lg backdrop-blur-sm border border-white/10 flex flex-col items-center">
                     <div class="w-16 h-16 mb-3 flex items-center justify-center">
                         <img src="yolo-default.png" alt="YOLO Achievement" class="w-full h-full object-contain">
                     </div>
                     <h3 class="text-lg text-center font-semibold">YOLO</h3>
-                    <p class="text-center text-gray-300 text-sm mt-1">You Only Live Once</p>
+                    <p class="text-center text-gray-300 text-sm mt-1">You want it? You merge it</p>
                 </div>
             </div>
         </section>
