--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <section class="mt-12">
             <h2 class="text-3xl font-bold text-center mb-6">🎮 Fun &amp; Games</h2>
             <!-- Game Menu Navigation -->
-            <nav class="game-menu backdrop-blur-sm border border-white/10 mb-6" role="navigation" aria-label="Game selection menu">
+            <nav class="game-menu backdrop-blur-sm border border-white/10 mb-6" aria-label="Game selection menu">
                 <ul class="flex flex-wrap justify-center">
                     <li class="game-menu-item active" data-game="memory">
                         <button type="button" class="px-4 py-2" aria-label="Play Memory Card Game" aria-pressed="true">
