Improve accessibility in index.html: update score and time elements to use aria-labelledby for better screen reader support and clearer context.

--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
                 <div class="game-header">
                     <div class="game-stats">
                         <div class="stat-box">
-                            <strong>Score:</strong> <span id="score" aria-live="polite" aria-label="Current score">0</span>
+                            <strong id="score-label">Score:</strong> <span id="score" aria-live="polite" aria-labelledby="score-label">0</span>
                         </div>
                         <div class="stat-box">
-                            <strong>Time:</strong> <span id="time" aria-live="polite" aria-label="Time remaining">60</span>s
+                            <strong id="time-label">Time:</strong> <span id="time" aria-live="polite" aria-labelledby="time-label">60</span>s
                         </div>
                     </div>
                     <div class="game-controls">
